--- a/Resources/views/components/collections/properties/form/text.html.twig
+++ b/Resources/views/components/collections/properties/form/text.html.twig
@@ -1,4 +1,7 @@
 <div>
     <label for="{{ config.name }}" {% if required is defined and required == true %}class="required"{% endif %}>{{ ('collection.property.type.' ~ config.name)|trans }}</label>
-    <input type="text" name="type-{{ id }}-{{ config.name }}" id="{{ config.name }}" value="{{ attribute(property.config, config.name) is defined ? attribute(property.config, config.name) : '' }}">
+    <input type="text"
+           name="type-{{ id }}-{{ config.name }}"
+           id="{{ config.name }}"
+           value="{{ attribute(property.config, config.name) is defined ? attribute(property.config, config.name) : '' }}">
 </div>
