--- a/Resources/views/collections/properties/edit.html.twig
+++ b/Resources/views/collections/properties/edit.html.twig
@@ -55,6 +55,12 @@
 
             <div class="row">
                 <div class="col s12">
+                    {{ form_row(propertyForm.editableForRole) }}
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col s12">
                     {{ form_row(propertyForm.includeInListView, {
                         attr: {
                             disabled: property != null and property.entryTitle,
