--- a/Resources/views/collections/relationships/edit.html.twig
+++ b/Resources/views/collections/relationships/edit.html.twig
@@ -35,6 +35,12 @@
 
             <div class="row">
                 <div class="col s12">
+                    {{ form_row(form.editableForRole) }}
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col s12">
                     {{ form_row(form.includeInJsonListView) }}
                 </div>
             </div>
