--- a/Resources/views/components/collections/entries/form/date.html.twig
+++ b/Resources/views/components/collections/entries/form/date.html.twig
@@ -4,6 +4,11 @@
 
         {% set value = attribute(entry.data, property.identifier) is defined ? attribute(entry.data, property.identifier) : property.config.defaultValue %}
 
-        <input type="text" class="datepicker" name="{{ property.identifier }}" id="{{ property.identifier }}" value="{{ value == 'now' ? 'now'|date('d-m-Y') : (value != '' ? value|date('d-m-Y') : '') }}">
+        <input type="text"
+               class="datepicker"
+               name="{{ property.identifier }}"
+               id="{{ property.identifier }}"
+               value="{{ value == 'now' ? 'now'|date('d-m-Y') : (value != '' ? value|date('d-m-Y') : '') }}"
+               {% if not is_granted_minimal(property.editableForRole) %}readonly="readonly"{% endif %}>
     </div>
 </div>
