--- a/Resources/views/components/collections/entries/form/url.html.twig
+++ b/Resources/views/components/collections/entries/form/url.html.twig
@@ -12,6 +12,10 @@
 <div class="row">
     <div class="col s12">
         <label for="{{ language ~ ':' ~ property.identifier }}" {% if property.required == true %}class="required"{% endif %}>{{ property.name }}</label>
-        <input type="url" name="{{ language ~ ':' ~ property.identifier }}" id="{{ language ~ ':' ~ property.identifier }}" value="{{ propertyValue }}">
+        <input type="url"
+               name="{{ language ~ ':' ~ property.identifier }}"
+               id="{{ language ~ ':' ~ property.identifier }}"
+               {% if not is_granted_minimal(property.editableForRole) %}readonly="readonly"{% endif %}
+               value="{{ propertyValue }}">
     </div>
 </div>
