Added styles, removed encore bundle because it could be used by the project itself

--- a/Resources/views/app.html.twig
+++ b/Resources/views/app.html.twig
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Pronto</title>
-    {{ encore_entry_link_tags('app') }}
+    <link rel="stylesheet" type="text/css" href="{{ mix('/build/css/app.css') }}"/>
 </head>
 <body>
     <div id="app"></div>
-    {{ encore_entry_script_tags('app') }}
+    <script src="{{ mix('/build/js/app.js') }}"></script>
 </body>
 </html>
