--- a/Resources/assets/scss/app.scss
+++ b/Resources/assets/scss/app.scss
@@ -1,138 +1,195 @@
-@import 'global';
+// Fonts
+@import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Nunito|Quicksand');
+// Variables
+@import 'variables';
+// Bootstrap
+@import '~bootstrap/scss/bootstrap';
+@import 'components/components';
 
 html, body {
-  margin: 0;
-  padding: 0;
   height: 100%;
   width: 100%;
-  background-color: $body-background;
-  color: #24282a;
+  padding: 0;
+  margin: 0;
+  //font-family: $default-font-family;
 }
 
-* {
-  box-sizing: border-box;
-}
+#app {
+  height: 100%;
 
-.page-loader-container {
-  display: block;
-}
+  > div {
+    height: 100%;
+    width: 100%;
 
-#container {
-  display: flex;
-  flex-direction: row;
-  height: 100vh;
+    #template-admin {
+      height: 100%;
+      display: flex;
+      flex-direction: row;
 
-  @import 'side-nav';
+      > aside {
+        flex: 0 0 250px;
+        overflow-y: scroll;
+        background-color: #ffffff;
+        box-shadow: 0 0 2rem 0 rgba(136, 152, 170, .15);
 
-  #main {
-    flex: auto;
-    display: flex;
-    flex-direction: column;
+        &::-webkit-scrollbar {
+          display: none;
+        }
 
-    @import 'top-nav';
+        header {
+          text-transform: uppercase;
+          letter-spacing: 1px;
+          font-weight: bold;
+          text-align: center;
+          padding-top: 16px;
+          font-size: 24px;
+          position: relative;
 
-    @import 'impersonating';
+          &:after {
+            position: absolute;
+            bottom: 0;
+            left: 20px;
+            width: calc(100% - 40px);
+            height: 1px;
+            background-color: var(--primary-color);
+            content: '';
+          }
+        }
 
-    @import 'page';
+        > main {
+          @import 'layouts/sidebar';
+        }
+      }
 
-    .text-primary {
-      color: $primary-color;
-    }
+      @media (max-width: 575.98px) {
+        > aside {
+          position: absolute;
+          top: 0;
+          left: -85%;
+          height: 100vh;
+          width: 85%;
+          flex: none;
+          z-index: 2;
+          transition: left 0.2s ease;
 
-    .text-secondary {
-      color: $secondary-color;
-    }
+          &.open {
+            left: 0;
+          }
 
-    .text-red {
-      color: $light-red-ochre;
-    }
+          .container-fluid {
+            .row {
+              .col-auto {
+                a {
+                  display: block;
+                  font-size: 20px;
+                  margin-top: 16px;
+                  height: 38px;
+                  width: 20px;
+                  line-height: 38px;
+                  text-align: center;
+                  color: var(--link-color);
+                }
+              }
+            }
+          }
+        }
+      }
 
-    .bold {
-      font-weight: bold;
-    }
+      > main {
+        flex: auto;
+        display: flex;
+        flex-direction: column;
+        overflow-y: scroll;
+        position: relative;
 
-    .text-large {
-      font-size: 18px;
-    }
+        > header {
+          position: fixed;
+          width: calc(100% - 250px);
+          z-index: 0;
+          right: 0;
 
-    .material-icons {
-      &.inline-icon {
-        vertical-align: middle;
-        font-size: 18px !important;
+          div[class^="col"] {
+            padding-top: 20px;
+
+            a {
+              cursor: pointer;
+              font-size: 18px;
+              color: var(--contrast-color);
+            }
+
+            &.dashboard-link {
+              padding-left: 55px;
+              text-transform: uppercase;
+              letter-spacing: 1px;
+              font-weight: bold;
+              text-decoration: none;
+
+              a:hover {
+                text-decoration: none;
+              }
+            }
+
+            &:last-of-type {
+              padding-right: 55px;
+            }
+          }
+
+          &:before {
+            position: fixed;
+            z-index: -1;
+            top: 0;
+            right: 0;
+            width: calc(100% - 250px);
+            height: 250px;
+            content: '';
+            background: linear-gradient(87deg, var(--primary-color) 0, var(--primary-color-dark) 100%);
+          }
+        }
+
+        > main {
+          flex: 1 0 auto;
+          overflow-y: auto;
+          padding: 115px 40px 40px 40px;
+        }
+
+        > footer {
+          flex: 0 0 50px;
+        }
+      }
+
+      @media (max-width: 575.98px) {
+        > main {
+          > header {
+            width: 100%;
+
+            &:before {
+              width: 100%;
+            }
+
+            div[class^="col"] {
+              &.dashboard-link {
+                padding-left: 10px !important;
+              }
+
+              &:last-of-type {
+                padding-right: 15px;
+              }
+            }
+          }
+
+          > main {
+            padding-left: 0;
+            padding-right: 0;
+          }
+        }
       }
     }
 
-    .to-copy {
-      border: 1px solid #CCCCCC;
-      background-color: #F4F4F4;
-      font-family: "Courier New", sans-serif;
-      padding: 3px;
-      border-radius: 2px;
-      margin-right: 3px;
-    }
-
-    .is-clickable {
-      cursor: pointer;
-    }
-
-    .break-all {
-      word-break: break-all;
-    }
-
-    .label {
-      position: relative;
-      padding: 3px 6px;
-      border-radius: 5px;
-      margin: 0 5px;
-
-      &.light {
-        color: #133454;
-      }
-
-      &.dark {
-        color: #ffffff;
-      }
-    }
-
-    div.webview {
-      border: 1px solid #cccccc;
-      background-color: #f9f9f9;
-      padding: 20px;
-      margin: 20px 0 0 0;
-    }
-
-    .col {
-      &.no-padding-left {
-        padding-left: 0;
-      }
-
-      &.no-padding-right {
-        padding-right: 0;
-      }
-    }
-
-    h1 {
-      &.border-bottom {
-        border-bottom: 1px solid $secondary-color;
-      }
-    }
-
-    .btn, .btn-flat, .btn-floating {
-      &.btn-padding-small {
-        padding: 0 1rem;
-      }
-
-      i.left {
-        margin-right: 5px;
-      }
-    }
-
-    .btn, .btn-flat {
-      padding: 0 16px;
-    }
-
-    pre {
-      margin: 0;
+    #template-front {
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
   }
 }
