--- a/Resources/views/authentication/login.html.twig
+++ b/Resources/views/authentication/login.html.twig
@@ -4,7 +4,7 @@
     <div class="container">
         <div class="row">
             <div class="col s12 m8 l6 offset-m2 offset-l3">
-                <h1><img src="{{ mix('/images/logo-login.png') }}" alt="Pronto" /></h1>
+                <h1><img src="{{ webpack_asset_tags('/images/logo-login.png') }}" alt="Pronto" /></h1>
 
                 <div class="card">
                     {% include "@ProntoMobile/components/loader.html.twig" %}
