--- a/Resources/assets/scss/app.scss
+++ b/Resources/assets/scss/app.scss
@@ -5,6 +5,7 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 @import 'components/components';
+@import 'libraries/fontawesome';
 
 html, body {
   height: 100%;
@@ -15,21 +16,30 @@ html, body {
 
 body {
   background-color: var(--background-color);
+  overflow: hidden;
 }
 
 #app {
   height: 100%;
+  overflow: hidden;
 
   > div {
     height: 100%;
     width: 100%;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
 
     > header {
       flex: 0 0 65px;
       background-color: #ffffff;
       box-shadow: 0 8px 8px -8px rgba(136, 152, 170, .15);
+
+      .container-fluid,
+      .container-fluid .row,
+      .container-fluid .row div[class^="col"] {
+        height: 100%;
+      }
     }
 
     > main {
@@ -37,6 +47,7 @@ body {
       position: relative;
       display: flex;
       flex-direction: row;
+      overflow: hidden;
 
       > aside {
         background-color: #ffffff;
@@ -84,7 +95,7 @@ body {
       }
 
       > main {
-        flex: auto;
+        flex: 1;
         display: flex;
         flex-direction: column;
         overflow-y: scroll;
