--- a/Resources/views/default/index.html.twig
+++ b/Resources/views/default/index.html.twig
@@ -9,16 +9,18 @@
 
     {% if plugins|length > 0 %}
         <div class="row">
-            {% for plugin in plugins if plugin.active != false %}
-                <div class="col s12 m6 l4">
-                    <div class="card card-clickable is-clickable" data-href="{{ path('pronto_mobile_' ~ plugin.plugin.identifier) }}">
-                        <i class="fa {{ plugin.plugin.icon }}"></i>
+            {% for plugin in plugins %}
+                {% if plugin.active != false %}
+                    <div class="col s12 m6 l4">
+                        <div class="card card-clickable is-clickable" data-href="{{ path('pronto_mobile_' ~ plugin.plugin.identifier) }}">
+                            <i class="fa {{ plugin.plugin.icon }}"></i>
 
-                        <div>
-                            <h1>{{ plugin.plugin.name }}</h1>
+                            <div>
+                                <h1>{{ plugin.plugin.name }}</h1>
+                            </div>
                         </div>
                     </div>
-                </div>
+                {% endif %}
             {% endfor %}
         </div>
     {% endif %}
