PHP7.4 package upgrades

--- a/Resources/assets/scss/_variables.scss
+++ b/Resources/assets/scss/_variables.scss
@@ -2,4 +2,12 @@
   --background-color: #f1f4f6;
 
   --button-disabled-background-color: #dee2e6;
+
+  --primary-color: #7289da;
+  --primary-color-dark: #667bc4;
+  --secondary-color: #2c2f33;
+  --secondary-color-dark: #272a2d;
+  --link-color: #99AAB5;
+  --link-color-dark: #2C2F33;
+  --contrast-color: #ffffff;
 }
