--- a/Resources/assets/scss/_variables.scss
+++ b/Resources/assets/scss/_variables.scss
@@ -10,4 +10,8 @@
   --link-color: #99AAB5;
   --link-color-dark: #2C2F33;
   --contrast-color: #ffffff;
+
+  // Dimensions
+  --navbar-height: 65px;
+  --sidebar-width: 250px;
 }
