--- a/Resources/assets/scss/app.scss
+++ b/Resources/assets/scss/app.scss
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Nunito|Quicksand');
 // Variables
 @import 'variables';
+@import 'mixins';
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 @import 'components/components';
@@ -16,81 +17,88 @@ html, body {
 
 body {
   background-color: var(--background-color);
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 #app {
   height: 100%;
-  overflow: hidden;
 
-  > div {
+  > div.template {
     height: 100%;
     width: 100%;
-    display: flex;
-    flex-direction: column;
-    overflow: hidden;
 
-    > header {
-      flex: 0 0 65px;
-      background-color: #ffffff;
-      box-shadow: 0 8px 8px -8px rgba(136, 152, 170, .15);
-
-      .container-fluid,
-      .container-fluid .row,
-      .container-fluid .row div[class^="col"] {
-        height: 100%;
-      }
-    }
-
-    > main {
-      flex: auto;
-      position: relative;
+    > div.template-header {
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: var(--navbar-height);
+      width: 100%;
+      background-color: transparent;
       display: flex;
       flex-direction: row;
-      overflow: hidden;
+      z-index: 1002;
 
-      > aside {
-        background-color: #ffffff;
-        flex: 0 0 250px;
-        overflow-y: scroll;
-        box-shadow: 8px 0 8px -8px rgba(136, 152, 170, .15);
+      > div {
+        height: var(--navbar-height);
+        line-height: var(--navbar-height);
+        flex: auto;
 
-        &::-webkit-scrollbar {
-          display: none;
+        &:nth-child(1) {
+          flex: 0 0 var(--sidebar-width);
+        }
+
+        &:nth-child(2) {
+          padding: 0 20px 0 50px;
+        }
+
+        &:nth-child(3) {
+          flex: 0 0 100px;
+          padding-right: 50px;
+          text-align: center;
+        }
+
+        @media (max-width: 575.98px) {
+          &:nth-child(2) {
+            display: none;
+          }
+
+          &:nth-child(3) {
+            flex: auto;
+            text-align: right;
+            padding-right: 30px;
+          }
         }
       }
 
-      @media (max-width: 575.98px) {
-        > aside {
-          position: absolute;
-          top: 0;
-          left: -85%;
-          height: 100vh;
-          width: 85%;
-          flex: none;
-          z-index: 2;
-          transition: left 0.2s ease;
+      &.vue-fixed-header--isFixed {
+        @include default-box-shadow();
+        position: fixed;
+        left: 0;
+        top: 0;
+        width: 100vw;
+        background-color: #ffffff;
+      }
+    }
 
-          &.open {
-            left: 0;
-          }
+    > div.template-content {
+      height: 100%;
+      position: relative;
+      display: flex;
+      flex-direction: row;
+      padding: var(--navbar-height) 0 0 var(--sidebar-width);
 
-          .container-fluid {
-            .row {
-              .col-auto {
-                a {
-                  display: block;
-                  font-size: 20px;
-                  margin-top: 16px;
-                  height: 38px;
-                  width: 20px;
-                  line-height: 38px;
-                  text-align: center;
-                  color: var(--link-color);
-                }
-              }
-            }
-          }
+      > aside {
+        position: fixed;
+        top: 0;
+        left: 0;
+        padding: var(--navbar-height) 0 0 0;
+        height: 100vh;
+        width: var(--sidebar-width);
+        overflow-y: scroll;
+        background-color: transparent;
+
+        &::-webkit-scrollbar {
+          display: none;
         }
       }
 
@@ -98,18 +106,18 @@ body {
         flex: 1;
         display: flex;
         flex-direction: column;
-        overflow-y: scroll;
         position: relative;
-
-        > header {
-          position: relative;
-          flex: 0 0 150px;
-        }
 
         > main {
           flex: 1 0 auto;
           overflow-y: auto;
-          padding: 40px;
+          padding: 30px;
+
+          div.content {
+            @include default-box-shadow();
+            @include default-border-radius();
+            background-color: #ffffff;
+          }
         }
 
         > footer {
@@ -118,15 +126,28 @@ body {
       }
 
       @media (max-width: 575.98px) {
+        padding: var(--navbar-height) 0 0 0;
+        transition: left 0.2s ease;
+        left: -250px;
+        width: calc(100vw + 250px);
+
+        > aside {
+          position: relative;
+          flex: 0 0 250px;
+          padding: 0;
+          height: calc(100vh - var(--navbar-height));
+        }
+
         > main {
-          > header {
-            //
-          }
+          background-color: var(--background-color);
 
           > main {
-            padding-left: 0;
-            padding-right: 0;
+            padding: 15px;
           }
+        }
+
+        &.aside-visible {
+          left: 0;
         }
       }
     }
