--- a/Resources/views/app.html.twig
+++ b/Resources/views/app.html.twig
@@ -2,6 +2,8 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Pronto</title>
     {{ webpack_asset_tags('css/app') | raw }}
 </head>
