- Added locale to API request headers - Started with collections - Updated UI - Application switcher - Updating theme after application change

--- a/Resources/assets/scss/components/_components.scss
+++ b/Resources/assets/scss/components/_components.scss
@@ -1,11 +1,12 @@
-@import './collapse';
-@import './grid';
 @import './alerts';
-@import './tables';
-@import './cards';
 @import './buttons';
-@import './pre';
+@import './cards';
+@import './collapse';
 @import './forms';
-@import './links';
-@import './transfer';
 @import './general';
+@import './grid';
+@import './headers';
+@import './links';
+@import './pre';
+@import './tables';
+@import './transfer';
