--- a/Resources/assets/scss/app.scss
+++ b/Resources/assets/scss/app.scss
@@ -1,5 +1,6 @@
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Nunito|Quicksand');
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600;700;900&display=swap');
 // Variables
 @import 'variables';
 @import 'mixins';
@@ -34,41 +35,7 @@ body {
       height: var(--navbar-height);
       width: 100%;
       background-color: transparent;
-      display: flex;
-      flex-direction: row;
       z-index: 1002;
-
-      > div {
-        height: var(--navbar-height);
-        line-height: var(--navbar-height);
-        flex: auto;
-
-        &:nth-child(1) {
-          flex: 0 0 var(--sidebar-width);
-        }
-
-        &:nth-child(2) {
-          padding: 0 20px 0 50px;
-        }
-
-        &:nth-child(3) {
-          flex: 0 0 100px;
-          padding-right: 50px;
-          text-align: center;
-        }
-
-        @media (max-width: 575.98px) {
-          &:nth-child(2) {
-            display: none;
-          }
-
-          &:nth-child(3) {
-            flex: auto;
-            text-align: right;
-            padding-right: 30px;
-          }
-        }
-      }
 
       &.vue-fixed-header--isFixed {
         @include default-box-shadow();
@@ -114,9 +81,13 @@ body {
           padding: 30px;
 
           div.content {
-            @include default-box-shadow();
-            @include default-border-radius();
-            background-color: #ffffff;
+            //@include default-box-shadow();
+            //@include default-border-radius();
+            //background-color: #ffffff;
+
+            .page-body {
+              //padding: 25px 10px;
+            }
           }
         }
 
@@ -126,28 +97,30 @@ body {
       }
 
       @media (max-width: 575.98px) {
-        padding: var(--navbar-height) 0 0 0;
-        transition: left 0.2s ease;
-        left: -250px;
-        width: calc(100vw + 250px);
+        &:not(.template-content-front) {
+          padding: var(--navbar-height) 0 0 0;
+          transition: left 0.2s ease;
+          left: -250px;
+          width: calc(100vw + 250px);
 
-        > aside {
-          position: relative;
-          flex: 0 0 250px;
-          padding: 0;
-          height: calc(100vh - var(--navbar-height));
-        }
-
-        > main {
-          background-color: var(--background-color);
+          > aside {
+            position: relative;
+            flex: 0 0 250px;
+            padding: 0;
+            height: calc(100vh - var(--navbar-height));
+          }
 
           > main {
-            padding: 15px;
-          }
-        }
+            background-color: var(--background-color);
 
-        &.aside-visible {
-          left: 0;
+            > main {
+              padding: 15px;
+            }
+          }
+
+          &.aside-visible {
+            left: 0;
+          }
         }
       }
     }
