--- a/Resources/assets/scss/components/_cards.scss
+++ b/Resources/assets/scss/components/_cards.scss
@@ -1,6 +1,8 @@
+@import '../mixins';
+
 .card {
-  box-shadow: 0 0 2rem 0 rgba(136, 152, 170, .15) !important;
-  border-radius: 8px !important;
+  @include default-box-shadow();
+  @include default-border-radius();
   margin-bottom: 40px !important;
   border: 0;
 
@@ -25,44 +27,9 @@
     }
   }
 
-  .card-header, h2, h3 {
-    text-transform: uppercase;
-    font-weight: bold;
-    font-family: Helvetica Neue, Nunito, sans-serif;
+  .card-header {
     background-color: transparent;
     border: 0;
-    font-size: 16px;
-    letter-spacing: 1px;
-    color: #172b4d;
-
-    > span {
-      font-size: 14px;
-      padding-right: 15px;
-    }
-  }
-
-  h2 {
-    font-family: Helvetica Neue, Nunito, sans-serif;
-    font-size: 15px;
-    letter-spacing: 1px;
-    margin: 10px 0;
-    color: var(--primary-color-dark);
-    position: relative;
-
-    &:after {
-      position: absolute;
-      bottom: -5px;
-      left: 0;
-      content: '';
-      width: 20px;
-      height: 2px;
-      background-color: var(--primary-color-dark);
-    }
-  }
-
-  h3 {
-    font-size: 14px;
-    color: var(--primary-color-dark);
   }
 
   .card-body {
